UIUX-904: All headerpanes broken in iPad after making them position:fixed

--- a/sugarcrm/styleguide/less/sugar-specific/layouts.less
+++ b/sugarcrm/styleguide/less/sugar-specific/layouts.less
@@ -24,7 +24,8 @@
 
 .main-pane {
   position: absolute;
-  top: 61px;
+  padding-top: 60px;
+  top: 0;
   bottom: 0;
   overflow-y: auto;
   overflow-x: hidden;
